--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "dependencies": {
     "express": "^4.15.3",
     "ip": "^1.1.5"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-env": "^1.6.0"
   }
 }
