--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node ./dist/server.js",
+    "dev": "nodemon server.js",
+    "build": "babel ./ -d dist"
   },
   "repository": {
     "type": "git",
