--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./dist/server.js",
     "dev": "nodemon server.js",
-    "build": "babel app -d dist && cp app/index.html dist && cp app/style.css dist && cp -a app/images dist"
+    "build": "babel app -d dist",
+    "build_bkp": "babel app -d dist && cp app/index.html dist && cp app/style.css dist && cp -a app/images dist"
   },
   "repository": {
     "type": "git",
