--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./build/server.js",
     "dev": "nodemon ./src/server.js",
-    "build": "babel src -d build"
+    "build": "cp -a src/. build/ && babel src -d build"
   },
   "repository": {
     "type": "git",
